# suss

./: .gitignore  README.md  pyproject.toml
bugnet/: agent.py  bugnet.py  index.py
bugnet/resources/: __init__.py
bugnet/tools/: __init__.py  find_bugs.py  read_file.py  search_code.py  search_files.py
suss/: __main__.py  agent.py  get_ast.py  index.py  suss.py
suss/resources/: boilerplate.py
suss/tools/: __init__.py  find_bugs.py  read_file.py  search_files.py
